--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>title</title>
+	<title>AUTODOCTOR</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="site/css/style.css">
@@ -26,7 +26,7 @@
 		<div id="header">
 			<div id="container">
 				<div id="logoandnav">
-					<div id="logo" class="unselectable cols col-4">avtodoktor-khimki</div>
+					<div id="logo" class="unselectable cols col-4">autodoktor-khimki</div>
 					<div class="unselectable cols col-8">
 						<ul id="nav">
 							<li onclick="gotoDiv(2)">ПРОЦЕСС РЕМОНТА</li>
@@ -118,7 +118,7 @@
 		     		<label>Адрес</label>
 		      		<p class="contact_address">Россия, Московская область, Химки, квартал Старбеево, улица Лизы Чайкиной, 22<br><b>Необходимо заранее записаться на приём</b></p>
 		      		<label>Контакты</label>
-		      		<p class="contact_address">+7 977 269 92 42 — Дмитрий</p>
+		      		<p class="contact_address">+7 000 000 00 00 — Дмитрий</p>
 		      		<div id="contact_network">
 		      			<img src="site/img/if_phone_1645999.png" class="network">
 		      			<img src="site/img/telegram.png" class="network">
