--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<div id="header">
 			<div id="container">
 				<div id="logoandnav">
-					<div id="logo" class="unselectable cols col-4">autodoctori</div>
+					<div id="logo" class="unselectable cols col-4">autodoctor</div>
 					<div class="unselectable cols col-8">
 						<ul id="nav">
 							<li onclick="gotoDiv(2)">ПРОЦЕСС РЕМОНТА</li>
